# datasheet-rag

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: manifest.json  open-manifest.json
data/demo/: riscv-chunks.jsonl
data/golden/: golden.jsonl  synthetic-train.jsonl  synthetic.jsonl
data/train/: train.jsonl  val.jsonl
docs/: PLAN.md  SPACE_README.md  ablation.md  case-study.md  corpus-stats.md  dataset-statement.md  eval-scorecard-rerank.md  eval-scorecard.md  finetune-study.md  judge-agreement.md  model-card.md  smoke-run.md  train_metrics.json
scripts/: ablation.py  corpus_stats.py  dump_contexts.py  eval_ft.py  grade.py  judge_agreement.py  prep_train_data.py  smoke_run.py  synthesize.py  train_qlora.py
src/datasheet_rag/: __init__.py
src/datasheet_rag/corpus/: __init__.py  download.py  manifest.py
src/datasheet_rag/eval/: __init__.py  __main__.py  agreement.py  closed_book.py  golden.py  judge.py  metrics.py  run.py  synthesize.py
src/datasheet_rag/ingest/: __init__.py  __main__.py  chunk.py  models.py  parse.py
src/datasheet_rag/rag/: __init__.py  __main__.py  bm25.py  embed.py  factory.py  generate.py  hybrid.py  pipeline.py  rerank.py  retrieve.py  store.py
tests/: test_agreement.py  test_chunk.py  test_eval_metrics.py  test_hybrid.py  test_ingest_models.py  test_manifest.py  test_rag_contract.py  test_rerank.py  test_synthesize.py
