[project]
name = "datasheet-rag"
version = "0.1.0"
description = "Retrieval-augmented QA over semiconductor datasheets: table-aware parsing, hybrid retrieval, grounded citations, and a QLoRA-vs-RAG comparative study."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Pavel Palgin" }]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "typer>=0.12",
]

[project.optional-dependencies]
ingest = [
    "docling>=2.0",
]
rag = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "einops>=0.8",  # required by nomic-embed-text's modeling code
    "rank-bm25>=0.2",
]
eval = [
    "ragas>=0.2",
    "deepeval>=1.0",
]
demo = [
    "gradio>=4.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datasheet_rag"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# typer.Option in argument defaults is the documented Typer CLI pattern
extend-immutable-calls = ["typer.Option"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
